--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Data Table</title>
     <style>
+       sidebar {
+    width: 300px;
+    background-color: #5C8151; 
+    padding: 20px;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
         table {
             width: 100%;
             border-collapse: collapse;
@@ -14,7 +25,7 @@
         }
         th, td {
             padding: 12px;
-            border: 1px solid #dddddd;
+            border: 1px solid #f2f2f2;
         }
         th {
             background-color: #f2f2f2;
@@ -25,7 +36,7 @@
     </style>
 </head>
 <body>
-
+    <div class="sidebar"></div>
 <table>
     <thead>
         <tr>
