--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -26,30 +26,8 @@
 </head>
 <body>
 
-<table>
-    <thead>
-        <tr>
-            <th>Country</th>
-            <th>Weather</th>
-            <th>Air Quality</th>
-            <th>Humidity</th>
-            <th>Average Humidity</th>
-            <th>Drought Risk</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-        </tr>
-        <tr>
-        </tr>
-        <tr>
-        </tr>
-        <tr>
-        </tr>
-        <tr>
-        </tr>
-    </tbody>
-</table>
+    <div id="openweathermap-widget-11"></div>
+    <script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script><script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 11,cityid: '3996069',appid: 'b05ad82a832f5da790b48645e5943fc7',units: 'metric',containerid: 'openweathermap-widget-11',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
 
 </body>
 </html>
