--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -16,16 +16,14 @@
 
             <h1 class="title">NyE GALAXY</h1>
 
-
             <div class="search-bar">
-                <form action="secondarypage.html">
-                   <input autocomplete="off" type="text" id="searchInput" placeholder="Write a name of a country, state or city">
+                <form action="/search" method="get">
+                    <input autocomplete="off" type="text" name="q" id="searchInput" placeholder="Write a name of a country, state or city">
+                    <button type="submit">Search</button>
                 </form> 
             </div>
         </div>
     </div>
-
-
 
 </body>
 </html>
