Implemented endpoint /search to gather weather data from the city selected by the user. Due: format data for user-friendliness

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -17,7 +17,7 @@
 
             <div class="search-bar">
                 <form action="/search" method="get">
-                    <input autocomplete="off" type="text" name="q" id="searchInput" placeholder="Write a name of a country, state or city">
+                    <input autocomplete="off" name="q" type="text" placeholder="Write a name of a country, state or city">
                     <button type="submit">Search</button>
                 </form> 
             </div>
