--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -13,7 +13,7 @@
                 <img src="../static/logo.png" alt="Logo" />
             </div>
 
-            <h1 class="title">NyE GALAXY</h1>
+            <h1 class="title">Natura</h1>
 
             <div class="search-bar">
                 <form action="/search" method="get">
